Fix scrollbar

--- a/styles/scrollbar.scss
+++ b/styles/scrollbar.scss
@@ -1,9 +1,10 @@
 ::-webkit-scrollbar {
-    width: 12px;
+    width: .8em;
 }
 
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: var(--primary);
 }
 
 ::-webkit-scrollbar-thumb {
